<resources>
    <string name="app_name">How to be a Stoic</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Stoicism Meditations</string>
    <string name="nav_header_subtitle">Massimo Pigliucci // Rachel Kiefl</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="lesson_one_title">Examine your Impression</string>
    <string name="lesson_two_title">Remember the Impermanence of Things</string>
    <string name="lesson_three_title">The Reverse Clause</string>
    <string name="lesson_four_title">Using Virtue Here and Now</string>
    <string name="lesson_five_title">Pause and Breathe</string>
    <string name="lesson_six_title">Other-ize</string>
    <string name="lesson_seven_title">Speak Little, Speak Well</string>
    <string name="lesson_eight_title">Choose your Company Well</string>
    <string name="lesson_nine_title">Respond to Insults with Humour</string>
    <string name="lesson_ten_title">Don\'t Often Speak Of Yourself</string>
    <string name="lesson_eleven_title">Speak Without Judging</string>
    <string name="lesson_twelve_title">Reflect on Your Day</string>
    <string name="home_second">Home Second</string>
    <string name="origin">Stoicism arose after Socrates\' demise, which lead to the creation of the epicureans, the Platoists, the Cynics and the Stoics</string>
    <string name="intro">This app is to help you develop you character as a Stoic and a person who wishes to be a better person and a happier person of the world</string>
    <string name="lesson_one_content">This lesson refers to the dichotomy of control -  that is - if you can do something, take control of a situation, then do it, else it is not worth your thoughts. As in illness, if you can no longer revent the illness, take whatever precastions necessary and rest until you are healthy. If you cannot do something, do not even try. This is also referred to as the \'axiom of futility\' by Larry Becker saying \'Agents are required not to make direct attempts to do (or be) something that is not logically, theoretically, or practically impossible.\'"</string>
    <string name="lesson_two_content">The quote sounds incredibly callous, but it is not intended to be - many interpret it thusly, even willfully so. However we must recall that in this era, the death rates were far greater and for a enighbour to have lost a child or two was not rare. Stoicism was thought of to be a philosophy of love, and in this instance Epictetus is trying to remind us of how precious our loved ones are precisely because our time with them is limited. If we acknowledge that each time we greet them or say farewell, perhaps we will ensure we make the most of our time together, truly appreciate our relationships before having to say a final farewell.</string>
    <string name="lesson_three_content">Epictetus brings in a simple example of going to the bathhouse. Similarly, going to  the movies, or driving through traffic, or chatting with friends, this mindset of not requiring perfection helps disalign oneself with our often high expectations. This also brigns into play the dichotomy of control - I chose to go to the movies (instead of renting) and so, where the behaviour of others in the theater is outside my control, my own behaviour is not. There is no reason for me not to request behaviour from others - Epictetus does not expect us to passively accept rudeness from others -  but we must also go in with a mindset that we may have a particular goal but events may no go as planned. In events go awry, we can make ourselves miserable or we can meet another goal we have set: to be a decent person who doesn\'t do anything that is unvirtuous or compromise our integrity.</string>
    <string name="lesson_four_content">In this, one of the most empowering passages in Epictetus\'s writings, he encourages us to use every occasion every challenge as a way to better ourselves, to view them as ways to discover or prove our virtue. Where Epictetus has been associated with seemingly grim and abstinence-y what is actually encouraged in tehStoic doctrine is tranquility and peace.</string>
    <string name="lesson_five_content">you are being harmed. If someone succeeds in provoking you, realize tht your min is complicit i the provocation. Which is why it is essential that we not respond impulsively to impressions; take a moment before reacting, and you will find it is easier to maintain control".  Stoics suggest handling insults as a rock would. Have you ever tried to insult a rock? One might also respond with humour. THe main idea is to take a breath, take a walk before reacting to potentially problematic situations. By taking the time to breath instead of reacting immediately, one might gain sme perspective to respond dispassionately to the insult. This also gives one space to determine if insult was even intended, or merely perceived.</string>
    <string name="lesson_six_content">With this exercise we are reminded or our quest for equanimity, even when our ability to be so is sorely tested. By realizing we are just like everyone else we can see by considering ones own situation as one would if it were a stranger is such a state, the specialness of our situation is gone, as it is, after all not special at all. Every single situation has been weathered by others before. If we allow ourselves to feel so strongly about our own misfortunes, then we ought to feel just as strongly about everyone else\'s plights. Of course, feeling strongly about everyone and everyone\'s plights would not only be exhausting but impossible. Not only statistically (too many damned people to care about) but it is psychologically impossible to have that much empathy, to have it would be inhuman. This exercise can help two-fold, in reducing ones dismissal of others grievances by considering how it would feel should they be your own grievances, as well as moderating your own reactions.</string>
    <string name="lesson_seven_content">Personally, I think this takes it too far. One should avoid talking of people, though if one would, praise would be preferable to the others. Where gladiators are no longer a typical subject of conversation, we can easily draw a parallel with today\'s celebrities. Speaking of celebrities is not an evil per se (even if definitely banal) it is simply empty. To indulge in such gossip is not virtuous, and is thus beneath the stoics. To engage in such conversation is to debase oneself. Despite the modern sensibilities tending toward resenting this seemingly elitist opinion, by responding less to talk of \'gladiators\' and introducing more involved conversation, more enjoyable engaging and informative conversation can be had.</string>
    <string name="lesson_eight_content">Here again this seems rather elitist, telling us not to associate with those lesser than us? However, Epictetus is not referring to those learned academics, simply people who engage in philosophy, consciously or not. Someone who applies reason to improve their life and the lives of those in the community around them. The suggestion of cutting off people who do not agree with your views, who would consider your attempts at bettering yourself a waste are perhaps not the greatest friends to keep beside you. By adhering to the previous lesson and engaging in more thoughtful conversation, perhaps those who you ought to keep beside you will become more clear. Pay attention to the people whose company you keep and think why. Do they inspire you? Do you admire them? What about them makes you worthy of each others time?</string>
    <string name="lesson_nine_content">By responding with self deprecation, your vilifier will be embarrassed or at least a bit disarmed. You can only feel insulted if you allow the words to hurt you, instead don\'t give them the power. This is of course not relevant when considering true bullying. This is an act entirely different than a single insult. This exercise is an act of endurance but by dismissing insults as irrelevant one may miss out on a learning opportunity. The key is to distinguish insult from criticism. Is it coming from a friend or someone likely to look up to you?</string>
    <string name="lesson_ten_content">Basically curb your ego. There sill be some pleasure at being able to hold yourself back and you may find you enjoy your social life more when you are not so focused on your own deeds. It\'s like going to the gym, its difficult in the moment but there is pleasure to be had in going just the same. Socially there is an obvious benefit, as no one really enjoys hearing others recount tales, there is no banter, no back and forth when hearing a story. That is not a conversation.</string>
    <string name="lesson_eleven_content">Distinguish between facts and judgement - what our biases make of them. What you perceive in one light may not be at all the right perception, despite stemming from a factual observation. If someone snaps at you instead of criticizing ask yourself "have I ever snapped at anyone?" The answer is of course, yes, and it certainly didn\'t help make you feel better then, and is unlikely to do so for this person. How would you have wanted someone to respond? Just think how much better the world would be if everyone refrained from hasty judgements and looked at others with a bit more empathy.</string>
    <string name="lesson_twelve_content">This stems from the "Discourses", not "Enchiridion" but is a useful practices and is recommended (or something similar is) in many "idealogies" like meditations. THe goal is to focus on the important happenings of the day, particularly those that have ethical valence. After each day ask yourself, "In what way have I become better today? What bad habit cured, what vice checked?" THis will lead you to becoming more in tune with yourself to know that your actions will see judgement at the end of the day. As in the idea "Will I regret this in 5 min, or 50 years?", only each day, and each of your actions. This will lead to more balanced decisions and behaviour.</string>
    <string name="lesson_one_quote">"So make a practice at once of saying to every strong impression: 'An impression is all you are, now the source of the impression.' Then test and assess it with your criteria, but one primarily: ask, 'Is this something that is, or is not, in my control?' And if it's not one of the thins that you control, be ready with the reaction 'Then it's none of my concern.'"</string>
    <string name="lesson_two_quote">"In the case of particular things that delight you, of benefit you, or to which you have grown attached, remind yourself of what they are. Start with things of little value. If yit is china you like, for instance, say, 'I am fond of a piece of china.' When is breaks, then you won't be as disconcerted. When giving you wife or child a kiss, repeat to yourself, 'I am kissing a mortal.' Then you won't be so distraught is they are taken from you."</string>
    <string name="lesson_three_quote">"Whenever planning an action, mentally rehearse what the plan entails. If you are heading out to bathe, picture to yourself the typical scene at the bathhouse - people splashing, pushing, yelling and pinching your clothes. You will complete the act with more composure if you say at the outset, 'I wast a bath, but at the same time I want to keep my will aligned with nature' [that is, to apply reason to social living]. Do it with every act. That way if something occurs to spoil you bath, you will have ready the thought, 'Well, this was not my only intention, I also means to keep my will in line with nature - which is impossible if I go all to pieces whenever anything bad happens.'"</string>
</resources>